src/snapshots/alma__infer__tests__test_infer_expression__bad condition type.snap
---
source: src/infer.rs
assertion_line: 1828
expression: "infer(\"if 1 then 5 else 1\")"

---
Input:

if 1 then 5 else 1

---
Output:

[1:3]

Type mismatch:  Float  ≠  Bool

Expected

  1│  if 1 then 5 else 1
   │     ↑

to be

Bool

but seems to be

Float
