src/snapshots/alma__infer__tests__test_infer_expression__duplicate_fields_in_records-2.snap
---
source: src/infer.rs
assertion_line: 1900
expression: "infer(\"{ name = 1, age = 1, name = 1 }\")"

---
Input:

{ name = 1, age = 1, name = 1 }

---
Output:

[1:21]

Duplicate field `name`

  1│  { name = 1, age = 1, name = 1 }
   │                       ↑↑↑↑

in record

  1│  { name = 1, age = 1, name = 1 }

