src/snapshots/alma__infer__tests__test_infer_expression__duplicate_fields_in_records.snap
---
source: src/infer.rs
assertion_line: 2421
expression: "infer(\"{ age = 1, age = 1 }\")"
---
Input:

{ age = 1, age = 1 }

---
Output:

Test.alma [3:18]

Duplicate field `age`

  1│  module Test exposing (test)
  2│  
  3│  test = { age = 1, age = 1 }
   │                    ↑↑↑

in record

  1│  module Test exposing (test)
  2│  
  3│  test = { age = 1, age = 1 }

