src/snapshots/alma__infer__tests__test_infer_expression__function binding.snap
---
source: src/infer.rs
assertion_line: 2354
expression: "infer(r\"\nlet incr = \\n -> n + 1\n\nincr True\")"
---
Input:


let incr = \n -> n + 1

incr True

---
Output:

Test.alma [6:5]

Type mismatch:  Bool  ≠  Float

Expected

  4│  let incr = \n -> n + 1
  5│  
  6│  incr True
   │       ↑↑↑↑

to be

Float

but seems to be

Bool
