src/snapshots/alma__infer__tests__test_infer_expression__lambdas_and_application-2.snap
---
source: src/infer.rs
assertion_line: 1790
expression: "infer(r\"\\f -> \\x -> f (f x)\")"

---
Input:

\f -> \x -> f (f x)

---
Output:

(a -> a) -> a -> a
