src/snapshots/alma__infer__tests__test_infer_expression__let-2.snap
---
source: src/infer.rs
assertion_line: 2281
expression: "infer(\"let a = bar\\nbar\")"
---
Input:

let a = bar
bar

---
Output:

[3:15]

Undefined identifier `bar`

  1│  module Test exposing (test)
  2│  
  3│  test = let a = bar
   │                 ↑↑↑
  4│  bar

----------------------------------------

[4:0]

Undefined identifier `bar`

  2│  
  3│  test = let a = bar
  4│  bar
   │  ↑↑↑
