src/snapshots/alma__infer__tests__test_infer_expression__let-3.snap
---
source: src/infer.rs
assertion_line: 2775
expression: "infer(\"\\\nlet add x y = x + y\n\nadd 5\")"
---
Input:

let add x y = x + y

add 5

---
Output:

Test.alma [5:0]

Type mismatch:  Float -> a  ≠  Float -> Float -> Float

Expected

  3│  test = let add x y = x + y
  4│  
  5│  add 5
   │  ↑↑↑↑↑

to be

    Float -> Float -> Float

but seems to be

    Float -> a
