src/snapshots/alma__infer__tests__test_infer_expression__pattern_matching_all_branches_return_type-2.snap
---
source: src/infer.rs
assertion_line: 2885
expression: "infer(\"\\\nwhen 5 is\n    1 -> True\n    1.2 -> 2\n            \")"
---
Input:

when 5 is
    1 -> True
    1.2 -> 2
            

---
Output:

Test.alma [5:4]

Type mismatch:  Float  ≠  Bool

Expected

  3│  test = when 5 is
  4│      1 -> True
  5│      1.2 -> 2
   │      ↑↑↑↑↑↑↑↑
  6│              

with type

    Float

to have the same type as

  2│  
  3│  test = when 5 is
  4│      1 -> True
   │      ↑↑↑↑↑↑↑↑↑
  5│      1.2 -> 2
  6│              

with type

    Bool
